--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint": "^7.32.0",
     "eslint-config-custom": "*",
     "prettier": "^2.5.1",
+    "tailwindcss": "^3.3.2",
     "turbo": "^1.9.7"
   },
   "name": "maddiefoodies-turborepo",
@@ -18,8 +19,5 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ],
-  "dependencies": {
-    "tailwindcss": "^3.3.2"
-  }
+  ]
 }
