--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "styled-components": "^6.0.0-rc.1"
+  }
 }
