fix: added Basic App layout

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "packages/*"
   ],
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.2",
     "antd": "^5.5.1",
     "styled-components": "^6.0.0-rc.1"
   }
