--- a/apps/foodies/package.json
+++ b/apps/foodies/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.2",
     "tailwindcss": "^3.3.2"
   }
 }
