--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -31,6 +31,7 @@
     "@types/styled-components": "^5.1.26",
     "eslint": "^8.6.0",
     "prettier": "^2.8.8",
+    "turbo": "^1.9.9",
     "typescript": "^4.9.5"
   },
   "prettier": {
