--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -12,6 +12,11 @@
     "@emotion/react": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.2",
+    "@portabletext/react": "^3.0.3",
+    "@sanity/client": "^6.1.3",
+    "@sanity/image-url": "^1.0.2",
+    "lottie-web": "^5.12.2",
+    "next-sanity": "^5.0.2",
     "tailwindcss": "^3.3.2"
   }
 }
