--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.5",
     "antd": "^5.5.1",
+    "framer-motion": "^10.12.18",
     "styled-components": "^6.0.0-rc.1"
   }
 }
