--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@turbo/gen": "^1.9.7",
+    "@types/aos": "^3.0.4",
     "@types/react-vertical-timeline-component": "^3.3.3",
     "eslint": "^7.32.0",
     "eslint-config-custom": "*",
@@ -26,7 +27,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.5",
     "antd": "^5.5.1",
+    "aos": "^2.3.4",
     "framer-motion": "^10.12.18",
+    "react-hook-form": "^7.45.1",
     "react-vertical-timeline-component": "^3.6.0",
     "styled-components": "^6.0.0-rc.1"
   }
