--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -17,6 +17,7 @@
     "@sanity/image-url": "^1.0.2",
     "lottie-web": "^5.12.2",
     "next-sanity": "^5.0.2",
+    "react-messenger-customer-chat": "^0.8.0",
     "tailwindcss": "^3.3.2"
   }
 }
