--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecom-cms",
+  "name": "portfolio-cms",
   "private": true,
   "version": "1.0.0",
   "main": "package.json",
@@ -15,6 +15,7 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/color-input": "^3.1.0",
     "@sanity/vision": "^3.11.1",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
@@ -22,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "sanity": "^3.11.1",
+    "sanity-plugin-hotspot-array": "^1.0.1",
     "styled-components": "^5.3.9",
     "tailwindcss": "^3.3.2"
   },
