--- a/apps/eshop/package.json
+++ b/apps/eshop/package.json
@@ -9,6 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "styled-components": "^6.0.7"
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.5",
+    "@sanity/client": "^6.4.9",
+    "@sanity/image-url": "^1.0.2",
+    "next-sanity": "^5.4.4",
+    "react-messenger-customer-chat": "^0.8.0",
+    "styled-components": "^6.0.7",
+    "tailwindcss": "^3.3.3"
   }
 }
