--- a/apps/eshop/package.json
+++ b/apps/eshop/package.json
@@ -17,6 +17,7 @@
     "next-sanity": "^5.4.4",
     "react-messenger-customer-chat": "^0.8.0",
     "styled-components": "^6.0.7",
+    "swiper": "^10.2.0",
     "tailwindcss": "^3.3.3"
   }
 }
