refactor: fix image height width

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "aos": "^2.3.4",
     "framer-motion": "^10.12.18",
     "react-hook-form": "^7.45.1",
+    "react-icons": "^4.10.1",
     "react-vertical-timeline-component": "^3.6.0",
     "styled-components": "^6.0.0-rc.1",
     "swiper": "^10.2.0"
