--- a/apps/eshop/package.json
+++ b/apps/eshop/package.json
@@ -15,10 +15,14 @@
     "@sanity/client": "^6.4.9",
     "@sanity/image-url": "^1.0.2",
     "next-sanity": "^5.4.4",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^4.10.1",
     "react-messenger-customer-chat": "^0.8.0",
     "styled-components": "^6.0.7",
     "swiper": "^10.2.0",
     "tailwindcss": "^3.3.3"
+  },
+  "devDependencies": {
+    "@types/react-google-recaptcha": "^2.1.5"
   }
 }
