--- a/apps/eshop/package.json
+++ b/apps/eshop/package.json
@@ -20,7 +20,8 @@
     "react-messenger-customer-chat": "^0.8.0",
     "styled-components": "^6.0.7",
     "swiper": "^10.2.0",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "universal-cookie": "^6.1.1"
   },
   "devDependencies": {
     "@types/react-google-recaptcha": "^2.1.5"
