--- a/apps/eshop/package.json
+++ b/apps/eshop/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.14.5",
     "@sanity/client": "^6.4.9",
     "@sanity/image-url": "^1.0.2",
+    "antd": "^5.9.0",
     "next-sanity": "^5.4.4",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^4.10.1",
