--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,12 +1,13 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Car rental Server installation",
+  "main": "index.ts",
   "scripts": {
     "start": "nodemon src/index.ts",
     "lint": "eslint . --ext .ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm run build --output public"
   },
   "keywords": [],
   "author": "",
