--- a/apps/eshop/package.json
+++ b/apps/eshop/package.json
@@ -15,9 +15,11 @@
     "@sanity/client": "^6.4.9",
     "@sanity/image-url": "^1.0.2",
     "antd": "^5.9.0",
+    "mapbox-gl": "^2.15.0",
     "next-sanity": "^5.4.4",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^4.10.1",
+    "react-map-gl": "^7.1.6",
     "react-messenger-customer-chat": "^0.8.0",
     "styled-components": "^6.0.7",
     "swiper": "^10.2.0",
