fix: fix whats app chatbot

--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
     "axios": "^1.4.0",
     "framer-motion": "^10.12.18",
     "next-auth": "^4.23.1",
+    "react-floating-whatsapp": "^5.0.8",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.45.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
     "react-vertical-timeline-component": "^3.6.0",
-    "react-whatsapp-widget": "^2.2.0",
     "recoil": "^0.7.7",
     "styled-components": "^6.0.0-rc.1",
     "swiper": "^10.2.0",
