--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@turbo/gen": "^1.9.7",
     "@types/aos": "^3.0.4",
+    "@types/lodash.debounce": "^4.0.8",
     "@types/react-google-recaptcha": "^2.1.5",
     "@types/react-vertical-timeline-component": "^3.3.3",
     "cz-conventional-changelog": "^3.3.0",
@@ -34,6 +35,7 @@
     "aos": "^2.3.4",
     "axios": "^1.4.0",
     "framer-motion": "^10.12.18",
+    "lodash.debounce": "^4.0.8",
     "next-auth": "^4.23.1",
     "react-floating-whatsapp": "^5.0.8",
     "react-google-recaptcha": "^3.1.0",
