--- a/.github/workflows/lighthouse-ci.yml
+++ b/.github/workflows/lighthouse-ci.yml
@@ -1,7 +1,10 @@
-name: Lighthouse CI for Akij-Turbo Repo
+name: Lighthouse CI for Eshop-Turbo Repo
 
 on:
   push:
+
+env:
+  ECOM_PREVIEW_URL: ${{ secrets.ECOM_PREVIEW_URL }}
 
 jobs:
   lhci-mobile:
@@ -17,7 +20,7 @@ jobs:
         run: |
           npm install
       - run: |
-          if [[ -n "${{ env.PREVIEW_URL }}" ]]; then echo "URL: ${{ env.PREVIEW_URL }}"; fi
+          if [[ -n "${{ env.ECOM_PREVIEW_URL }}" ]]; then echo "URL: ${{ env.ECOM_PREVIEW_URL }}"; fi
       - name: run Lighthouse CI - Mobile
         run: |
           npm install -g @lhci/cli@0.3.x
@@ -38,7 +41,7 @@ jobs:
         run: |
           npm install
       - run: |
-          if [[ -n "${{ env.PREVIEW_URL }}" ]]; then echo "URL: ${{ env.PREVIEW_URL }}"; fi
+          if [[ -n "${{ env.ECOM_PREVIEW_URL }}" ]]; then echo "URL: ${{ env.ECOM_PREVIEW_URL }}"; fi
       - name: run Lighthouse CI - Desktop
         run: |
           npm install -g @lhci/cli@0.3.x
