refactor: added changes

--- a/.github/workflows/lighthouse-ci.yml
+++ b/.github/workflows/lighthouse-ci.yml
@@ -2,6 +2,8 @@ name: Lighthouse CI for Eshop-Turbo Repo
 
 on:
   push:
+    paths:
+      - 'apps/eshop'
 
 env:
   ECOM_PREVIEW_URL: ${{ secrets.ECOM_PREVIEW_URL }}
