--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "recoil": "^0.7.7",
     "styled-components": "^6.0.0-rc.1",
     "swiper": "^10.2.0",
+    "turbo-darwin-64": "^1.11.2",
     "universal-cookie": "^6.1.1"
   },
   "config": {
