--- a/apps/eshop/package.json
+++ b/apps/eshop/package.json
@@ -11,21 +11,26 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^1.7.18",
     "@mui/material": "^5.14.5",
     "@sanity/client": "^6.4.9",
     "@sanity/image-url": "^1.0.2",
     "antd": "^5.9.0",
+    "autoprefixer": "^10.4.16",
     "mapbox-gl": "^2.15.0",
     "next-sanity": "^5.4.4",
+    "postcss": "^8.4.33",
+    "react-date-range": "^2.0.0-alpha.4",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^4.10.1",
     "react-map-gl": "^7.1.6",
     "styled-components": "^6.0.7",
     "swiper": "^10.2.0",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^3.4.1",
     "universal-cookie": "^6.1.1"
   },
   "devDependencies": {
+    "@types/react-date-range": "^1.4.9",
     "@types/react-google-recaptcha": "^2.1.5"
   }
 }
