feat: new project setup

--- a/turbo.json
+++ b/turbo.json
@@ -13,6 +13,11 @@
         "VERCEL",
         "ALLOW_ROBOTS",
         "CURRENT_DOMAIN",
+        "NEXTAUTH_SECRET",
+        "NEXTAUTH_URL",
+        "DISCORD_CLIENT_ID",
+        "DISCORD_CLIENT_SECRET",
+        "SKIP_ENV_VALIDATION",
         "NEXT_PUBLIC_SANITY_DATASET",
         "NEXT_PUBLIC_SANITY_PROJECT_ID",
         "NEXT_PUBLIC_CAPTCHA_SITE_KEY",
