--- a/apps/builderstate/.env.example
+++ b/apps/builderstate/.env.example
@@ -13,9 +13,9 @@
 # You can generate a new secret on the command line with:
 # openssl rand -base64 32
 # https://next-auth.js.org/configuration/options#secret
-# NEXTAUTH_SECRET=""
+NEXTAUTH_SECRET="ddddddd"
 NEXTAUTH_URL="http://localhost:3000"
 
 # Next Auth Discord Provider
-DISCORD_CLIENT_ID=""
-DISCORD_CLIENT_SECRET=""
+DISCORD_CLIENT_ID="wwwwwww"
+DISCORD_CLIENT_SECRET="wwwwwwww"
