fix: fix env issue

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,20 +1,20 @@
 # APPLICATION VARIABLES
-APP_NAME = HotelBooking
-APP_PORT = 3050
-APP_BASE_URL = 3050
-APP_SERVICE_URL = 
-APP_LOG_LEVEL = 
-APP_LOG_LEVEL = 
+APP_NAME="HotelBooking"
+APP_PORT="3050"
+APP_BASE_URL="3050"
+APP_SERVICE_URL=
+APP_LOG_LEVEL=
 
 # DATABASE VARIABLES
-MONGO_URI = mongodb+srv://abulbasharkhanrakib:uLgdX4OhOYncQlzX@rentalcluster.womy6ti.mongodb.net/
+MONGO_URI="mongodb+srv://abulbasharkhanrakib:uLgdX4OhOYncQlzX@rentalcluster.womy6ti.mongodb.net/"
 
 # JWT VARIABLES
-JWT_SECRET_KEY = hfr4tfhwebgvgrvtvh3r
-JWT_ACCESS_TOKEN_EXPIRES = 
-JWT_REFRESH_TOKEN_EXPIRES = 
-JWT_TOKEN_COOKIE_EXPIRES = 
+JWT_SECRET_KEY="hfr4tfhwebgvgrvtvh3r"
+JWT_ACCESS_TOKEN_EXPIRES="72"
+JWT_REFRESH_TOKEN_EXPIRES="72"
+JWT_REFRESH_TOKEN_SECRET_KEY="scbjhsdbjhdshd43654$@%&"
+JWT_TOKEN_COOKIE_EXPIRES="72"
 
 # EMAIL VARIABLES
-SEND_SENDER_MAIL = 
-SEND_GRID_API_KEY = 
+SEND_SENDER_MAIL=
+SEND_GRID_API_KEY=
