--- a/apps/hotelserver/package.json
+++ b/apps/hotelserver/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -r esm server.js"
+    "start": "nodemon -r esm server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "cp -r /* public/"
   },
   "keywords": [],
   "author": "",
