--- a/apps/hotelserver/package.json
+++ b/apps/hotelserver/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon -r esm server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cp -r /* public/"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
