--- a/turbo.json
+++ b/turbo.json
@@ -49,7 +49,9 @@
         "STRIPE_REDIRECT_URL",
         "STRIPE_SETTING_REDIRECT_URL",
         "STRIPE_SUCCESS_URL",
-        "STRIPE_CANCEL_URL"
+        "STRIPE_CANCEL_URL",
+        "PAYPAL_CLIENT_ID",
+        "STRIPE_API_KEY"
       ]
     },
     "test": {
