--- a/apps/hoteldb/package.json
+++ b/apps/hoteldb/package.json
@@ -4,10 +4,11 @@
   "description": "Car rental Server installation",
   "main": "index.ts",
   "scripts": {
-    "start": "nodemon index.ts",
+    "start": "node dist/index.js",
     "lint": "eslint . --ext .ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "npx tsc",
+    "dev": "nodemon index.ts"
   },
   "keywords": [],
   "author": "",
