--- a/apps/hoteldb/tsconfig.json
+++ b/apps/hoteldb/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es2016",
+    "target": "es2018",
     "module": "commonjs",
     "outDir": "dist",
     "esModuleInterop": true,
@@ -8,6 +8,10 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "skipLibCheck": true,
-    "noImplicitAny": false  // Disable the noImplicitAny check
+    "noImplicitAny": false,  // Disable the noImplicitAny check
+    "baseUrl": "./src",
+    "paths": {
+      "*": ["*"]
+    }
   }
 }
