--- a/apps/hoteldb/tsconfig.json
+++ b/apps/hoteldb/tsconfig.json
@@ -8,10 +8,6 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "skipLibCheck": true,
-    "noImplicitAny": false,  // Disable the noImplicitAny check
-    "baseUrl": "./src",
-    "paths": {
-      "*": ["*"]
-    }
+    "noImplicitAny": false
   }
 }
