--- a/apps/hoteldb/package.json
+++ b/apps/hoteldb/package.json
@@ -4,10 +4,10 @@
   "description": "Car rental Server installation",
   "main": "index.ts",
   "scripts": {
-    "start": "nodemon index.ts",
+    "start": "node dist/index.js",
     "lint": "eslint . --ext .ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
+    "build": "npx tsc",
     "dev": "nodemon index.ts",
     "commit": "cz"
   },
@@ -23,6 +23,8 @@
     "@types/morgan": "^1.9.5",
     "@types/multer": "^1.4.11",
     "@types/serve-favicon": "^2.5.7",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
     "eslint": "^8.48.0",
@@ -47,7 +49,9 @@
     "mongoose": "^7.4.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "config": {
     "commitizen": {
