--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -39,6 +39,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^5.8.1",
     "mongoose": "^7.4.5",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "serve-favicon": "^2.5.0"
   }
 }
