feat: added Next auth redux toolkit next ui and many more

--- a/apps/builderstate/.env.example
+++ b/apps/builderstate/.env.example
@@ -1,21 +1,12 @@
-# Since the ".env" file is gitignored, you can use the ".env.example" file to
-# build a new ".env" file when you clone the repo. Keep this file up-to-date
-# when you add new variables to `.env`.
+NEXT_PUBLIC_API_URL="https://hoteldb-delta.vercel.app/api/"
+NEXTAUTH_SECRET="wqerttt"
+NEXTAUTH_URL="http://localhost:5010"
 
-# This file will be committed to version control, so make sure not to have any
-# secrets in it. If you are cloning this repo, create a copy of this file named
-# ".env" and populate it with your secrets.
-
-# When adding additional environment variables, the schema in "/src/env.js"
-# should be updated accordingly.
-
-# Next Auth
-# You can generate a new secret on the command line with:
-# openssl rand -base64 32
-# https://next-auth.js.org/configuration/options#secret
-NEXTAUTH_SECRET="ddddddd"
-NEXTAUTH_URL="http://localhost:3000"
-
-# Next Auth Discord Provider
-DISCORD_CLIENT_ID="wwwwwww"
-DISCORD_CLIENT_SECRET="wwwwwwww"
+#Next Auth providerDISCORD_CLIENT_ID="1189038718535872532"
+DISCORD_CLIENT_SECRET="qhutanFAARD8uBvWHBnZcuIBZ77YaCm9"
+GOOGLE_ID="410805748909-bj2757duvjv6cs2qcn5jimj3kair6st6.apps.googleusercontent.com"
+GOOGLE_SECRET="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"
+GITHUB_ID="004ffbf2d46c443579f7"
+GITHUB_SECRET="f7ec94133cc180c4dd37113c41dbfb83bac11b46"
+FACEBOOK_ID=""
+FACEBOOK_SECRET=""
