--- a/apps/builderstate/package.json
+++ b/apps/builderstate/package.json
@@ -5,16 +5,25 @@
   "type": "module",
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "next dev --port 5010",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
+    "@reduxjs/toolkit": "^2.2.1",
     "@t3-oss/env-nextjs": "^0.7.1",
+    "axios": "^1.6.7",
+    "commitizen": "^4.3.0",
+    "framer-motion": "^11.0.5",
+    "husky": "^9.0.11",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-redux": "^9.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -36,5 +45,16 @@
   "ct3aMetadata": {
     "initVersion": "7.25.2"
   },
-  "packageManager": "npm@9.7.2"
+  "packageManager": "npm@9.7.2",
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint",
+      "pre-push": ".husky/pre-push"
+    }
+  }
 }
