--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.5",
+    "@nextui-org/react": "^2.2.9",
     "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.5.1",
     "aos": "^2.3.4",
@@ -37,12 +38,13 @@
     "framer-motion": "^10.12.18",
     "lodash.debounce": "^4.0.8",
     "next-auth": "^4.23.1",
+    "next-themes": "^0.2.1",
     "react-floating-whatsapp": "^5.0.8",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.45.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
-    "react-redux": "^8.1.2",
+    "react-redux": "^8.1.3",
     "react-vertical-timeline-component": "^3.6.0",
     "recoil": "^0.7.7",
     "styled-components": "^6.0.0-rc.1",
