--- a/apps/hotelninja/package.json
+++ b/apps/hotelninja/package.json
@@ -1,32 +1,32 @@
 {
-  "name": "builderstate",
+  "name": "hotelninja",
   "version": "0.1.0",
   "private": true,
   "type": "module",
   "scripts": {
     "build": "next build",
-    "dev": "next dev --port 5010",
+    "dev": "next dev --port 5011",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
+    "@t3-oss/env-nextjs": "^0.7.1",
+    "next": "^14.0.4",
+    "next-auth": "^4.24.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "zod": "^3.22.4",
     "@nextui-org/react": "^2.2.9",
     "@nextui-org/system": "^2.0.15",
     "@nextui-org/theme": "^2.1.17",
     "@reduxjs/toolkit": "^2.2.1",
-    "@t3-oss/env-nextjs": "^0.7.1",
     "axios": "^1.6.7",
     "commitizen": "^4.3.0",
     "framer-motion": "^11.0.5",
     "husky": "^9.0.11",
-    "next": "^14.0.4",
-    "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-redux": "^9.1.0",
-    "zod": "^3.22.4"
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@types/eslint": "^8.44.7",
@@ -45,7 +45,7 @@
     "typescript": "^5.1.6"
   },
   "ct3aMetadata": {
-    "initVersion": "7.25.2"
+    "initVersion": "7.26.0"
   },
   "packageManager": "npm@9.7.2",
   "config": {
