--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.5",
     "@nextui-org/react": "^2.2.9",
+    "@nextui-org/system": "^2.0.15",
+    "@nextui-org/theme": "^2.1.17",
     "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.5.1",
     "aos": "^2.3.4",
     "axios": "^1.4.0",
-    "framer-motion": "^10.12.18",
+    "framer-motion": "^10.18.0",
     "lodash.debounce": "^4.0.8",
     "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
